test/corpus/fail/M0109.mo
=========
M0109.mo
=========

query actor class Foo() {}

---

(source_file
  (class_dec
    (shared_pat)
    (obj_sort)
    (type_identifier)
    (tup_pat)
    (class_body
      (obj_body))))
